# blockinfo_mysql/api/controllers/trans_in_blocks.js
@@ -42,7 +42,7 @@ var connection = mysql.createConnection(c.mysql_path)
   we specify that in the exports of this module that 'hello' maps to the function named 'hello'
  */
 module.exports = {
-  daily_blocks_increase : daily_blocks_increase
+  trans_in_blocks : trans_in_blocks
 };
 
 /*
@@ -51,31 +51,24 @@ module.exports = {
   Param 1: a handle to the request object
   Param 2: a handle to the response object
  */
-function daily_blocks_increase(req, res) {
+function trans_in_blocks(req, res) {
   // variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
   // var name = req.swagger.params.name.value || 'stranger';
   //var hello = util.format('Blocks: 9');
   //onnection.connect();
-  connection.query('SELECT day , AVG(number) AS avgHeight FROM ( SELECT LEFT(timestamp,10) AS day, number AS number FROM transactions) as daytable group by day',
+  connection.query('SELECT number, COUNT(*) FROM transactions group by number',
    function(err, rows, fields) {
       if (err) throw err;
     //console.log('The solution is: ', rows[0].solution);
-      //console.log(rows[0])
+      console.log(rows)
       for(var j = 0; j < rows.length; j++) {
         var a = []
         for(var x in rows[j]){
           a.push(rows[j][x])
         }
-          rows[j]=a
-      }
-
-      var b=[]
-      b[0] = rows[0]
-      for(var j = 1; j < rows.length; j++) {
-          b[j]=a[j] = a[j-1]
-      }
-
-      res.json(b.join('|'));
+        rows[j]=a
+      } 
+      res.json(rows.join('|'));
 
   });
   //onnection.end();
