# blockinfo_mysql/api/swagger/swagger.yaml
@@ -162,7 +162,24 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse" 
-            
+  /trans_in_blocks:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: trans_in_blocks
+    get:
+      description: Returns 'transactions' to the caller
+      # used as the method name of the controller
+      operationId: trans_in_blocks
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/TransactionsResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse" 
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
